# bitwise-challenge-2022-2

./: .gitignore  README.md  profile.sh  pyproject.toml
bitwise_challenge_2022_2/: __init__.py  __main__.py  network.py  optimize.py
bitwise_pahkina_2022_2/: __init__.py  __main__.py  koodipahkina-data.json  network.py  optimize.py
scripts/: plot_optimization_log.py
tests/: test_bitwise_pahkina_2022_2.py  test_network.py  test_optimize.py
