[tool.poetry]
name = "bitwise-pahkina-2022-2"
version = "0.1.0"
description = ""
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
networkx = "^2.8"
numpy = "^1.22.3"
pymoo = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
