[tool.poetry]
name = "bitwise-challenge-2022-2"
version = "0.1.0"
description = ""
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
pymoo = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.13.7"
snakeviz = "^2.1.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
