[tool.poetry]
name = "bitwise-challenge-2022-2"
version = "0.1.0"
description = ""
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = ">=1.18,<1.22"
numba = "^0.55.1"
icc-rt = "^2020.0.133"
pymoo = { git = "https://github.com/mkouhia/pymoo.git", branch = "master-fixed" }
plotext = {version = "^5.0.2", optional = true}
networkx = "^2.8"
pyrecorder = "^0.2.1"
optuna = {version = "^3.0.0-b0", allow-prereleases = true}
optuna-dashboard = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.13.7"
snakeviz = "^2.1.1"
pytest-mock = "^3.7.0"

[tool.poetry.extras]
plots = ["plotext"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
